feat(api)!: migrate to flask-smorest
